--- a/index.css
+++ b/index.css
@@ -19,9 +19,10 @@ body{
 }
 
 img{
-    width: 90px;
-    height: 90px;
-    
+    max-width: 90px;
+    max-height: 90px;
+    width: 100%;
+    height: 100%;
 }
 
 header{
@@ -38,8 +39,10 @@ h1{
 }
 
 footer img{
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    width: 100%;
+    height: 100%;
 }
 
 footer{
