--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@ ul{
 li a{
     text-decoration: none;
     color: rgb(253, 253, 253);
-    font-family: cursive;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 30px;
 }
 
