--- a/index.css
+++ b/index.css
@@ -20,8 +20,8 @@ body{
 }
 
 img{
-    max-width: 90px;
-    max-height: 90px;
+    max-width: 6vw;
+    max-height: 6vw;
     width: 100%;
     height: 100%;
 }
