--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ ul{
     justify-content:space-around;
     align-items: center;
     padding: 10px;
-    
+    flex-wrap: wrap; 
 }
 
 li a{
@@ -66,6 +66,7 @@ margin-top: 2px;
 .container{
     padding: 0px 60px;
     flex-wrap: wrap;
+
 }
 
 nav a:hover{
