--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ ul{
     list-style-type: none;
     justify-content:space-around;
     align-items: center;
-    padding: 10px;
+    padding: 0.5vw;
     flex-wrap: wrap; 
 }
 
@@ -53,18 +53,18 @@ footer{
 }
 
 footer a{
-    margin: 20px;
+    margin: 1.5vw;
     text-align: center;
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
 
 footer p{
-margin-top: 2px;
+margin-top: 0.2vw;
 
 }
 .container{
-    padding: 0px 60px;
+    padding: 0px 3vw;
     flex-wrap: wrap;
 
 }
@@ -74,8 +74,8 @@ nav a:hover{
 }
 
 .caixa{
-    box-shadow: 0px 0px 10px rgb(255, 255, 255);
-    border-radius: 20px;
+    box-shadow: 0px 0px 0.8vw rgb(255, 255, 255);
+    border-radius: 2vw;
     background-color: rgb(27, 24, 24);
 
 }
