--- a/index.css
+++ b/index.css
@@ -1,22 +1,27 @@
-ul{
+nav{
     display: flex;
-    list-style-type: none;
-    justify-content:space-around;
-    align-items: center;
-    padding: 0.5vw;
-    flex-wrap: wrap; 
+  justify-content:space-between;
+  align-items: center;
+  background-color: #121212;
+  padding: 2vw;
+  border-radius: 1.5vw;
+  box-shadow: 0 0 1.5vw rgba(0, 0, 0, 0.6);
+  flex-wrap: wrap; 
+    gap: 30vw;
 }
 
-li a{
+nav a{
     text-decoration: none;
     color: rgb(253, 253, 253);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2.5vw;
-    
+    font-weight: bold;
+    flex: 1vw;
 }
 
+
 body{
-    background-color: rgb(8, 8, 8);
+    background: linear-gradient(rgb(48, 47, 47),black);
 }
 
 img{
@@ -77,8 +82,20 @@ nav a:hover{
     box-shadow: 0px 0px 0.8vw rgb(255, 255, 255);
     border-radius: 2vw;
     background-color: rgb(27, 24, 24);
+    display: inline-flex;
+    align-items:center;
+    margin: 2vw;
 
 }
 main{
     color: rgb(248, 248, 248);
 }
+
+fieldset{
+    border-radius: 1vw;
+    display: inline-block;
+}
+
+.logo {
+    height: 6vw;
+  }
